--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run covid19project:serve-ssr",
+    "serve:ssr": "node dist/covid19project/server/main.js",
+    "build:ssr": "ng build --prod && ng run covid19project:server:production",
+    "prerender": "ng run covid19project:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,19 +22,35 @@
     "@angular/forms": "~9.0.7",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
+    "@angular/platform-server": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@nguniversal/express-engine": "^9.0.2",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
+    "@types/papaparse": "^5.0.3",
+    "bootstrap": "^4.4.1",
+    "csv-parser": "^2.3.2",
+    "express": "^4.15.2",
+    "jquery": "^3.4.1",
+    "leaflet": "^1.6.0",
+    "leaflet.markercluster": "^1.4.1",
+    "mock-browser": "^0.92.14",
+    "ngx-csv-parser": "0.0.2",
+    "pg": "^8.0.2",
+    "pg-native": "^3.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.7",
     "@angular/cli": "~9.0.7",
     "@angular/compiler-cli": "~9.0.7",
     "@angular/language-service": "~9.0.7",
-    "@types/node": "^12.11.1",
+    "@nguniversal/builders": "^9.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.35",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -43,5 +63,11 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "papaparse": false
   }
 }
