--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
+    "types": ["node"],
+    "typeRoots": [ "./node_modules/@types"],
     "lib": [
       "es2018",
       "dom"
@@ -20,4 +22,5 @@
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
   }
+
 }
